common/istio-1-9/kubeflow-istio-resources/base/kf-istio-resources.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  # Add your codes here, upgrade HTTP to HTTPS
    tls:
      httpsRedirect: true

  - port:
      name: https
      number: 443
      protocol: HTTPS
    hosts:
      - '*'
    tls:
      credentialName: kubeflow-ingressgateway-certs
      mode: SIMPLE
